# chess-dashboard

./: .dockerignore  .gitignore  AGENTS.md  CONTEXT.md  Dockerfile  LICENSE  Makefile  Procfile  README.md  USCF OTB FULL.pgn  USCF_OTB_FULL.pgn  ai_summary.py  analysis_cache.py  analysis_trends.py  app.py  auth.py  callbacks.py  coach_match_core.py  components.py  config.py  data.py  docker-compose.yml  docker-entrypoint.sh  engine_analysis_core.py  filters.py  fly.toml  games.pgn  gunicorn.conf.py  layout.py  lichess_client.py  pgn_stats_core.py  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  shell.py  styles.py  sync.py  uscf_client.py  uscf_core.py  (+1 more)
.github/workflows/: ci.yml
assets/: VENDOR.md  custom.css  lichess-pgn-viewer.min.js  lpv-init.js
docs/: features.md  prd-design-overhaul.md  resume-blurb.md
docs/adr/: 0001-lichess-studies-are-the-source-of-truth.md  0002-lessons-live-on-lichess-as-comment-conventions.md  0003-uscf-is-enrichment-never-a-dependency.md  0004-engine-analysis-is-enrichment-never-a-dependency.md  0005-per-user-store-registry.md  0006-single-worker-in-memory-store.md  0007-match-precedence-and-tiebreakers.md
docs/audits/: CODEBASE_REVIEW_2026-07-11.html
docs/decisions/: 0001-lichess-studies-are-the-source-of-truth.md  0002-lessons-live-on-lichess-as-comment-conventions.md  0003-uscf-is-enrichment-never-a-dependency.md  0004-engine-analysis-is-enrichment-never-a-dependency.md  0005-per-user-store-registry.md  0006-single-worker-in-memory-store.md  0007-match-precedence-and-tiebreakers.md
docs/design-review/: README.md
pages/: AGENTS.md  analysis.py  events.py  game_detail.py  games.py  lessons.py  openings.py  opponents.py  overview.py  reconciliation.py  trends.py
scripts/: anonymize_pgn.py
tests/: conftest.py  test_ai_summary.py  test_analysis_cache.py  test_analysis_trends.py  test_anonymize_pgn.py  test_auth.py  test_coach_match_core.py  test_coach_sync.py  test_config.py  test_data.py  test_engine_analysis_core.py  test_game_detail_coach.py  test_issue_93.py  test_lessons_coach.py  test_lichess_client.py  test_pgn_stats_core.py  test_shell.py  test_sync.py  test_theme.py  test_ui_smoke.py  test_uscf_client.py  test_uscf_core.py  test_user_config.py
tests/data/: analyzed-alice-anderson.pgn  coach-study.pgn  demo-games.pgn
tests/data/uscf/: awards.json  events.json  games.json  lichess-study-snapshot.pgn  member-profile.json  norms.json  opponent-bob-baker.json  opponent-carver-clark.json  rating-supplements.json  sections.json  standings-acc-may-2026.json  standings-dmv-extra-games.json  standings-dmv-under-1800.json  standings-rockville-u1500.json  standings-thanksgiving-u1600.json
tests/fixtures/: analyzed-georgina-chin.pgn  coach-study.pgn
tests/fixtures/uscf/: awards.json  events.json  games.json  lichess-study-snapshot.pgn  member-profile.json  norms.json  opponent-fontaine.json  opponent-kaiyrberli.json  rating-supplements.json  sections.json  standings-acc-may-2026.json  standings-dmv-extra-games.json  standings-dmv-under-1800.json  standings-rockville-u1500.json  standings-thanksgiving-u1600.json
