[project]
name = "chess-stats-dashboard"
version = "2.0.0"
description = "Interactive OTB chess analytics dashboard powered by Plotly Dash"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "dash>=2.14.0",
    "dash-bootstrap-components>=1.5.0",
    "plotly>=5.18.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "python-chess>=1.9.0",
    "gunicorn>=21.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
    "pandas-stubs>=2.0.0",
]

[project.scripts]
chess-stats = "app:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]  # line length handled by formatter

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
warn_return_any = false
warn_unused_ignores = true
