[project]
name = "chess-dashboard"
version = "2.0.0"
description = "Interactive OTB chess analytics dashboard powered by Plotly Dash"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "dash>=4.0.0",
    "dash-bootstrap-components>=2.0.0",
    "plotly>=5.18.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "python-chess>=1.9.0",
    "requests>=2.31.0",
    "gunicorn>=21.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
    "pandas-stubs>=2.0.0",
]

[project.scripts]
chess-dashboard = "app:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]  # line length handled by formatter

# requires-python declares the deployed/tested runtime (3.11); ruff & mypy keep a
# conservative 3.10 syntax floor so the code stays 3.10-clean. They don't need to
# match requires-python — a lower tool floor is a strict superset of checks.
[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_return_any = false
warn_unused_ignores = true
# The type-checked set — bare `mypy` (Makefile + CI) uses this, so the two can't
# drift. The pure cores, HTTP clients, and orchestration; the Dash UI layer is
# exercised by tests rather than type-checked.
files = [
    "pgn_stats_core.py", "lichess_client.py", "uscf_client.py", "uscf_core.py",
    "engine_analysis_core.py", "analysis_trends.py", "coach_match_core.py",
    "ai_summary.py", "analysis_cache.py", "sync.py", "data.py", "config.py",
    "auth.py", "user_config.py",
]

# Coverage source lives here so `make test` and CI share one list and one gate.
[tool.coverage.run]
source = [
    "pgn_stats_core", "lichess_client", "uscf_client", "uscf_core",
    "engine_analysis_core", "analysis_trends", "coach_match_core",
    "ai_summary", "analysis_cache", "sync", "data", "config",
    "auth", "user_config", "shell", "filters", "components", "pages",
]

[tool.coverage.report]
show_missing = true
# The suite sits at ~96%; 92 is the floor CI enforces, with headroom for churn.
fail_under = 92
